@@ -15,6 +15,7 @@ git-annex (10.20240731) UNRELEASED; urgency=medium
     git-annex remotedaemon is killed while locking a key to prevent its
     removal.
   * When proxying a download from a special remote, avoid unncessary hashing.
+  * When proxying an upload to a special remote, verify the hash.
   * Propagate --force to git-annex transferrer.
   * Added a build flag for servant, enabling annex+http urls and 
     git-annex p2phttp.
